--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "@angular/platform-browser": "^18.2.0",
         "@angular/platform-browser-dynamic": "^18.2.0",
         "@angular/router": "^18.2.0",
-        "@nguniversal/express-engine": "^16.2.0",
+        "@angular/ssr": "^18.2.0",
         "@stripe/stripe-js": "^7.3.0",
         "chart.js": "^4.4.6",
         "font-awesome": "^4.7.0",
